# ai-circuit

./: .gitignore  Project.md  README.md  evaluate.py  kaggle_setup.ipynb  pyproject.toml  requirements.txt  run_full_agent.py  run_human_agent.py  run_workflow2.py  train.py  training_config.yaml
.agents/skills/: developing-with-streamlit
agents/: data_prep_agent.py  hm_data_prep_agent.py  hm_training_agent.py  prompts.py  training_agent.py
docs/: Project.md
experiments/: experiment_log.json  master_log.json
experiments/20260714_163115_local_ha/: experiment_log.json
experiments/20260714_163115_local_ha/run_1/: config.yaml  metrics.json  notes.md
experiments/20260714_163115_local_ha/run_2/: config.yaml  metrics.json  notes.md
experiments/20260714_163115_local_ha/run_3/: config.yaml  metrics.json
experiments/20260715_064118_local_fa/: experiment_log.json
experiments/20260715_064118_local_fa/run_1/: config.yaml  metrics.json  notes.md
experiments/20260715_064118_local_fa/run_2/: config.yaml  metrics.json  notes.md
experiments/20260715_064118_local_fa/run_3/: config.yaml  metrics.json
experiments/20260717_115333_local_ha1/: experiment_log.json
experiments/local_dev_20260714_160801/: config.yaml  metrics.json
experiments/run_1/: config.yaml  metrics.json  notes.md
experiments/run_2/: config.yaml  metrics.json
kaggle/: ai-circuit-training.ipynb  setup_guide.md
reports/: dashboard.py
utils/: compare_experiments.py  create_sample_data.py  data_prep.py  data_prep_pipeline.py  inspect_checkpoint.py  llm_api.py
(+79 files in other folders)
