[project]
name = "ai-circuit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=0.9.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tensorboard>=2.14.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
